# Pixora

./: .gitignore  LICENSE  README.md  txt
client/: package-lock.json  package.json
client/src/: middleware.js
client/src/app/: globals.css  layout.jsx  not-found.jsx  page.jsx  page.module.css
client/src/app/ico/: layout.jsx  page.jsx  page.module.css
client/src/components/: AnimatedArrow.jsx  ConversionView.jsx  ConvertButton.jsx  ConvertedPreview.jsx  DownloadOverlay.jsx  Footer.jsx  Loader.jsx  Navbar.jsx  OriginalPreview.jsx  Settings.jsx  UploadBox.jsx  UploadInfo.jsx
client/src/config/: routes.js
client/src/hooks/: useConversion.js  useDownload.js  useIndexedDB.js  useUpload.js  useValidation.js
client/src/services/: api.js  convert.js  download.js  ico_service.js  indexeddb.js  upload.js  validate.js
client/src/styles/: conversionview.css  convertbutton.css  footer.css  loader.css  navbar.css  not-found.css  preview.css  responsive.css  settings.css  uploadbox.css  uploadinfo.css
client/src/utils/: dimensions.js  formats.js  helpers.js  metadata.js  validators.js
py-server/: main.py  requirements.txt
py-server/routes/: convert.py  ico.py  metadata.py  validate.py
py-server/services/: converter.py  ico_converter.py  metadata_handler.py  validator.py  zip_generator.py
py-server/utils/: dimensions.py  formats.py  helpers.py  validators.py
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: convert.rs  ico.rs  metadata.rs  mod.rs  validate.rs
src-tauri/src/services/: converter.rs  ico_converter.rs  metadata_handler.rs  mod.rs  validator.rs  zip_generator.rs
src-tauri/src/utils/: dimensions.rs  formats.rs  helpers.rs  mod.rs  validators.rs
