[package]
name        = "pixora"
version     = "1.0.0"
edition     = "2021"
authors     = ["Pixora Contributors"]
description = "Pixora — Professional Image Converter (Rust Backend + Tauri App)"

[[bin]]
name = "Pixora"
path = "src/main.rs"

[lib]
name       = "pixora_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
path       = "src/lib.rs"

# ── Runtime ────────────────────────────────────────────────────────────────
[dependencies]
tokio = { version = "1", features = ["full"] }

# ── HTTP server ────────────────────────────────────────────────────────────
axum       = { version = "0.7", features = ["multipart"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tower      = { version = "0.4" }

# ── Image processing ───────────────────────────────────────────────────────
image = { version = "0.25", features = ["png", "jpeg", "webp", "bmp", "tiff", "avif", "ico"] }

# ── EXIF / metadata ────────────────────────────────────────────────────────
kamadak-exif = "0.5"

# ── ZIP ────────────────────────────────────────────────────────────────────
zip = "2"

# ── SVG rasterization ──────────────────────────────────────────────────────
resvg     = "0.42"
tiny-skia = "0.11"
usvg      = "0.42"

# ── Serialization ──────────────────────────────────────────────────────────
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# ── Misc ───────────────────────────────────────────────────────────────────
bytes      = "1"
mime_guess = "2"
dotenvy    = "0.15"
thiserror  = "1"
anyhow     = "1"

# ── Logging ────────────────────────────────────────────────────────────────
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ── Tauri — only pulled in when `desktop` feature is active ───────────────
[dependencies.tauri]
version  = "2"
features = []
optional = true

[dependencies.tauri-plugin-shell]
version  = "2"
optional = true

# ── Features ───────────────────────────────────────────────────────────────
[features]
# `server`  → standalone HTTP binary (default)
# `desktop` → Tauri window + embedded server
# `custom-protocol` → set automatically by `cargo tauri build`
default         = ["desktop"]
server          = []
desktop         = ["tauri", "tauri-plugin-shell"]
custom-protocol = ["tauri/custom-protocol"]

# ── Build profiles ─────────────────────────────────────────────────────────
[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
panic         = "abort"

[profile.dev]
opt-level = 1

[build-dependencies]
tauri-build = { version = "2", features = [] }
